--- a/data/one-dark.scss
+++ b/data/one-dark.scss
@@ -85,3 +85,57 @@ atom-text-editor {
     }
   }
 }
+
+.syntax--comment {
+  color: $mono-3;
+  font-style: italic;
+}
+
+.syntax--keyword {
+  color: $hue-3;
+}
+
+.syntax--variable {
+  color: $hue-5;
+  &.syntax--parameter {
+    color: $mono-1;
+  }
+}
+
+.syntax--punctuation {
+  color: $mono-1;
+}
+
+.syntax--string {
+  color: $hue-4;
+}
+
+.syntax--constant {
+  color: $hue-6;
+  &.syntax--character {
+    color: $hue-4;
+  }
+}
+
+.syntax--entity {
+  color: $mono-1;
+  &.syntax--function {
+    color: $hue-2;
+  }
+}
+
+.syntax--meta {
+  &.syntax--class {
+    color: $hue-6-2;
+  }
+}
+
+.syntax--support {
+  &.syntax--type {
+    color: $hue-1;
+  }
+}
+
+.syntax--storage {
+  color: $hue-3;
+}
